--- a/angular.json
+++ b/angular.json
@@ -76,18 +76,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "pothole-front-end:build"
+            "browserTarget": "pothole-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "pothole-front-end:build:production"
+              "browserTarget": "pothole-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pothole-front-end:build"
+            "browserTarget": "pothole-angular:build"
           }
         },
         "test": {
@@ -126,16 +126,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "pothole-front-end:serve"
+            "devServerTarget": "pothole-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "pothole-front-end:serve:production"
+              "devServerTarget": "pothole-angular:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "pothole-front-end"
+  "defaultProject": "pothole-angular"
 }
